--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "https": "^1.0.0",
+    "mysql": "^2.18.1",
     "pem": "^1.14.4",
     "pg": "^8.2.1"
   },
